fix navbar alignment and functionality

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,7 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Montserrat);
 body {
     font-family: 'Montserrat', sans-serif;
-    padding-top: 70px;
     padding-bottom: 70px;
 }
 
